backend/aws-stack-template.yaml
Resources:
  ZillowetteVPCD20D58E8:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: ZillowetteIntegrationsStack/ZillowetteVPC
  ZillowetteVPCPublicSubnet1SubnetBE0B3CBD:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.0.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "aws-tutorial:subnet-name"
          Value: Public
        - Key: "aws-tutorial:subnet-type"
          Value: Public
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet1
  ZillowetteVPCPublicSubnet1RouteTableA63763CC:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet1
  ZillowetteVPCPublicSubnet1RouteTableAssociationFD6DF484:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPublicSubnet1RouteTableA63763CC
      SubnetId: !Ref ZillowetteVPCPublicSubnet1SubnetBE0B3CBD
  ZillowetteVPCPublicSubnet1DefaultRouteD59FC1D2:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPublicSubnet1RouteTableA63763CC
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ZillowetteVPCIGW3645F9D4
    DependsOn:
      - ZillowetteVPCVPCGW514A8E2A
  ZillowetteVPCPublicSubnet1EIPD3DAF766:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet1
  ZillowetteVPCPublicSubnet1NATGatewayC5702CC8:
    Type: "AWS::EC2::NatGateway"
    Properties:
      SubnetId: !Ref ZillowetteVPCPublicSubnet1SubnetBE0B3CBD
      AllocationId: !GetAtt
        - ZillowetteVPCPublicSubnet1EIPD3DAF766
        - AllocationId
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet1
  ZillowetteVPCPublicSubnet2Subnet26685AB7:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.0.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "aws-tutorial:subnet-name"
          Value: Public
        - Key: "aws-tutorial:subnet-type"
          Value: Public
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet2
  ZillowetteVPCPublicSubnet2RouteTable356B306D:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet2
  ZillowetteVPCPublicSubnet2RouteTableAssociation1035F5D0:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPublicSubnet2RouteTable356B306D
      SubnetId: !Ref ZillowetteVPCPublicSubnet2Subnet26685AB7
  ZillowetteVPCPublicSubnet2DefaultRoute4AB2237D:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPublicSubnet2RouteTable356B306D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref ZillowetteVPCIGW3645F9D4
    DependsOn:
      - ZillowetteVPCVPCGW514A8E2A
  ZillowetteVPCPublicSubnet2EIP40226FDB:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet2
  ZillowetteVPCPublicSubnet2NATGatewayE6EAEEAB:
    Type: "AWS::EC2::NatGateway"
    Properties:
      SubnetId: !Ref ZillowetteVPCPublicSubnet2Subnet26685AB7
      AllocationId: !GetAtt
        - ZillowetteVPCPublicSubnet2EIP40226FDB
        - AllocationId
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PublicSubnet2
  ZillowetteVPCPrivateSubnet1SubnetE5CDA06F:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.0.128.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "aws-tutorial:subnet-name"
          Value: Private
        - Key: "aws-tutorial:subnet-type"
          Value: Private
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PrivateSubnet1
  ZillowetteVPCPrivateSubnet1RouteTable2DE71EA5:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PrivateSubnet1
  ZillowetteVPCPrivateSubnet1RouteTableAssociation0CFE385A:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPrivateSubnet1RouteTable2DE71EA5
      SubnetId: !Ref ZillowetteVPCPrivateSubnet1SubnetE5CDA06F
  ZillowetteVPCPrivateSubnet1DefaultRouteAAEB83F7:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPrivateSubnet1RouteTable2DE71EA5
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref ZillowetteVPCPublicSubnet1NATGatewayC5702CC8
  ZillowetteVPCPrivateSubnet2SubnetA9278FA5:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.0.192.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "aws-tutorial:subnet-name"
          Value: Private
        - Key: "aws-tutorial:subnet-type"
          Value: Private
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PrivateSubnet2
  ZillowetteVPCPrivateSubnet2RouteTable6E1CF234:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      Tags:
        - Key: Name
          Value: >-
            ZillowetteIntegrationsStack/ZillowetteVPC/PrivateSubnet2
  ZillowetteVPCPrivateSubnet2RouteTableAssociation7F682A6E:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPrivateSubnet2RouteTable6E1CF234
      SubnetId: !Ref ZillowetteVPCPrivateSubnet2SubnetA9278FA5
  ZillowetteVPCPrivateSubnet2DefaultRoute012406AE:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref ZillowetteVPCPrivateSubnet2RouteTable6E1CF234
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref ZillowetteVPCPublicSubnet2NATGatewayE6EAEEAB
  ZillowetteVPCIGW3645F9D4:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: ZillowetteIntegrationsStack/ZillowetteVPC
  ZillowetteVPCVPCGW514A8E2A:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref ZillowetteVPCD20D58E8
      InternetGatewayId: !Ref ZillowetteVPCIGW3645F9D4
  ZillowetteCluster09C95435:
    Type: "AWS::ECS::Cluster"
  ZillowetteServiceLB8E9ECEA5:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internal
      SecurityGroups:
        - !GetAtt
          - ZillowetteServiceLBSecurityGroup22BA351A
          - GroupId
      Subnets:
        - !Ref ZillowetteVPCPrivateSubnet1SubnetE5CDA06F
        - !Ref ZillowetteVPCPrivateSubnet2SubnetA9278FA5
      Type: application
  ZillowetteServiceLBSecurityGroup22BA351A:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: >-
        Automatically created Security Group for ELB
        ZillowetteIntegrationsStackZillowetteServiceLBCB8E0368
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 3000
          FromPort: 3000
          IpProtocol: tcp
          ToPort: 3000
      VpcId: !Ref ZillowetteVPCD20D58E8
  ZillowetteServiceLBSecurityGrouptoZillowetteIntegrationsStackZillowetteServiceSecurityGroupD7C89143805EA68A3C:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      GroupId: !GetAtt
        - ZillowetteServiceLBSecurityGroup22BA351A
        - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId: !GetAtt
        - ZillowetteServiceSecurityGroup334FF7AF
        - GroupId
      FromPort: 3000
      ToPort: 3000
  ZillowetteServiceLBPublicListener2554FECD:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref ZillowetteServiceLBPublicListenerECSGroup0E6605DB
          Type: forward
      LoadBalancerArn: !Ref ZillowetteServiceLB8E9ECEA5
      Port: 3000
      Protocol: HTTP
  ZillowetteServiceLBPublicListenerECSGroup0E6605DB:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Port: 3000
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: "false"
      TargetType: ip
      VpcId: !Ref ZillowetteVPCD20D58E8
  ZillowetteServiceTaskDefTaskRole2B89439A:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
  ZillowetteServiceTaskDef914930A0:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: "024848467417.dkr.ecr.us-east-1.amazonaws.com/zillowette/zillowette-repository-image"
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ZillowetteServiceTaskDefwebLogGroupBA8BE497
              awslogs-stream-prefix: ZillowetteService
              awslogs-region: !Ref "AWS::Region"
          Name: web
          PortMappings:
            - ContainerPort: 3000
              Protocol: tcp
          Secrets:
            - Name: "CONNECTION_STRING"
              ValueFrom: arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_CONNECTION_STRING-NLN5o8
            - Name: "POSTGRES_CONNECTION_STRING_TEST"
              ValueFrom: arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_POSTGRES_CONNECTION_STRING_TEST-1TvAmm
            - Name: "TOKEN_KEY"
              ValueFrom: arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_TOKEN_KEY-IZ4p2J
            - Name: "API_IP"
              ValueFrom: arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_API_IP-W4hGWG
            - Name: "ZILLOWETTE_AES_KEY"
              ValueFrom: arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_AES_KEY-Hl4bOs
      Cpu: "512"
      ExecutionRoleArn: !GetAtt
        - ZillowetteServiceTaskDefExecutionRoleC7103AEA
        - Arn
      Family: >-
        ZillowetteIntegrationsStackZillowetteServiceTaskDefB5E162FC
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn: !GetAtt
        - ZillowetteServiceTaskDefTaskRole2B89439A
        - Arn
  ZillowetteServiceTaskDefwebLogGroupBA8BE497:
    Type: "AWS::Logs::LogGroup"
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  ZillowetteServiceTaskDefExecutionRoleC7103AEA:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 
              "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
  ZillowetteServiceTaskDefExecutionRoleDefaultPolicy0F96072D:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "logs:CreateLogStream"
              - "logs:PutLogEvents"
            Effect: Allow
            Resource: !GetAtt
              - ZillowetteServiceTaskDefwebLogGroupBA8BE497
              - Arn
          - Action:
              - "ecr:GetAuthorizationToken"
              - "ecr:BatchCheckLayerAvailability"
              - "ecr:GetDownloadUrlForLayer"
              - "ecr:BatchGetImage"
            Effect: Allow
            Resource: "*"
          - Action:
              - "secretsmanager:GetSecretValue"
            Effect: Allow
            Resource:
              - arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_CONNECTION_STRING-NLN5o8
              - arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_POSTGRES_CONNECTION_STRING_TEST-1TvAmm
              - arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_TOKEN_KEY-IZ4p2J
              - arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_API_IP-W4hGWG
              - arn:aws:secretsmanager:us-east-1:024848467417:secret:ZILLOWETTE_AES_KEY-Hl4bOs
        Version: 2012-10-17
      PolicyName: >-
        ZillowetteServiceTaskDefExecutionRoleDefaultPolicy0F96072D
      Roles:
        - !Ref ZillowetteServiceTaskDefExecutionRoleC7103AEA
  ZillowetteService73010F72:
    Type: "AWS::ECS::Service"
    Properties:
      Cluster: !Ref ZillowetteCluster09C95435
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 3000
          TargetGroupArn: !Ref ZillowetteServiceLBPublicListenerECSGroup0E6605DB
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt
              - ZillowetteServiceSecurityGroup334FF7AF
              - GroupId
          Subnets:
            - !Ref ZillowetteVPCPrivateSubnet1SubnetE5CDA06F
            - !Ref ZillowetteVPCPrivateSubnet2SubnetA9278FA5
      TaskDefinition: !Ref ZillowetteServiceTaskDef914930A0
    DependsOn:
      - ZillowetteServiceLBPublicListenerECSGroup0E6605DB
      - ZillowetteServiceLBPublicListener2554FECD
  ZillowetteServiceSecurityGroup334FF7AF:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: >-
        ZillowetteIntegrationsStack/ZillowetteService/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId: !Ref ZillowetteVPCD20D58E8
  ZillowetteServiceSecurityGroupfromZillowetteIntegrationsStackZillowetteServiceLBSecurityGroup37A9AEF980935D99E0:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 3000
      GroupId: !GetAtt
        - ZillowetteServiceSecurityGroup334FF7AF
        - GroupId
      SourceSecurityGroupId: !GetAtt
        - ZillowetteServiceLBSecurityGroup22BA351A
        - GroupId
      ToPort: 3000
Outputs:
  ZillowetteServiceLoadBalancerDNSCBE42D83:
    Value: !GetAtt
      - ZillowetteServiceLB8E9ECEA5
      - DNSName
  ZillowetteServiceServiceURLB6E59CA2:
    Value: !Join
      - ""
      - - "http://"
        - !GetAtt
          - ZillowetteServiceLB8E9ECEA5
          - DNSName
